--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Oct.2014
                         of Birmingham</a>, U.K. I received my MSc and
                         MPhil degree in computer science (information
                         security, under the supervision
-                        of <a href="http://www.uow.edu.au/~guilin/">Dr. Guilin
+                        of <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
                         Wang</a>
                         and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
                         Mu</a>) respectively in 2011 and 2012, from
@@ -159,8 +159,13 @@ Oct.2014
                                 </a>
                             </div>
                             <div style="height:4cm; overflow:auto"> <!--overflow:hiden is also nice -->
-                            <p><font size="4">Mainly about my academic research, and a bit
-                            about hacking.</font></p>
+                              <p><font size="4">
+                                    "If what you are doing is not
+                                  important, and if you don't think it
+                                  is going to lead to something
+                                  important, why are you working on
+                                  it?" --- Dr. Richard W. Hamming.
+                            </font></p>
                             </div>
                             <div class="text-center">
                             	<a href="#templatemo-research" 
@@ -260,10 +265,36 @@ Oct.2014
                         <br>
 
                         <font size="4">
+                          <p style="margin-left: 200px; margin-bottom: 6px">
+                            <b><font size="5">Some quotes from Dr. Richard W. Hamming</b>
+                            </font>
+                            <ul type="circle" style="margin-left: 200px; margin-bottom: 6px">
+                                  <li>"What are the important problems of
+                                  your field?"</li>
+
+                                  <li>"If what you are doing is not
+                                  important, and if you don't think it
+                                  is going to lead to something
+                                  important, why are you working on
+                                  it?"</li><br><b>(What is your
+                                  answer? Happy to discuss!)</b> <br>
+                                  Note that you can always "try and
+                                  change what is difficult to some
+                                  other situation which is easily done
+                                  but is still important." --- also
+                                  from Dr. Richard W. Hamming.</p>
+                            </ul>
+
+                            <br><br>
+
                     <p style="margin-left: 200px; margin-bottom:
-                        6px"><b>Publications and Manuscripts: </b></p>
+                              6px"><font size="5"><b>Publications and
+                              Manuscripts: </b></font><br>
+                              &nbsp;&nbsp;&nbsp;&nbsp;(My <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=
+                              en"> <b>Google scholar</b></a> page.)</p>
+
 	                  <ul type="square"; style="margin-left: 200px; margin-bottom:
-                              6px">
+                                                    6px">
 	                    <li><b>Journal:</b><br>
                         <ul type="circle">
                           <li>Guilin Wang, Jiangshan Yu, Qi
@@ -336,7 +367,9 @@ Oct.2014
                     
                     <br>
                     <p style="margin-left: 200px; margin-bottom:
-                              6px"><b>Professional Activities: </b></p>
+                              6px"><font size="5"><b> Professional
+                              Activities:
+                    </b></font></p>
 	                  <ul type="disc"; style="margin-left: 200px; margin-bottom:
                               6px">
 	                    <li><b>Invited Reviewer (Journal):</b><br>
@@ -433,7 +466,7 @@ Oct.2014
 
                     <br>
                     <p style="margin-left: 200px; margin-bottom:
-                              6px"><b>HONORS AND AWARDS: </b></p>
+                              6px"><font size="5"><b>Honors and Awards: </b></font></p>
 	                  <ul type="disc"; style="margin-left: 200px; margin-bottom:
                               6px">
 	                    <li><b>Scholarships:</b><br>
@@ -497,8 +530,8 @@ Oct.2014
                           </ul>
 
 
-                    <p style="margin-left: 200px; margin-bottom: 6px"><b>Other
-                    Links: </b></p>
+                    <p style="margin-left: 200px; margin-bottom: 6px"><font size="5"><b>Other
+                    Links: </b></font></p>
 
 	                  <ul type="circle"; style="margin-left: 200px; margin-bottom:
                               6px">
@@ -648,7 +681,7 @@ Oct.2014
                                         for more details. </p>
                               <br>
                     <p style="margin-left: 200px; margin-bottom:
-                        6px"> <b>Tech-Project</b></p>
+                        6px"> <font size="5"><b>Tech-Project</b></font></p>
 	                  <ul type="square"; style="margin-left: 10em; margin-bottom:
                               6px">
 	                    <li><p><b>ECT/ConfiMail</b></p> 
@@ -713,8 +746,9 @@ Oct.2014
                       <br>
                       </ul>
 
-                     <p style="margin-left: 200px; margin-bottom: 6px"> <b>Trust
-                        and Investment</b></p>
+                     <p style="margin-left: 200px; margin-bottom:
+                        6px"> <font size="5"><b>Trust and
+                        Investment</b></font></p>
                       <p style="margin-left: 200px; margin-bottom:
                         6px"><a href="http://www.jinxdai.com">Jin Xin Tong Trust
                         and Investment Corporation Ltd</a> is a Chinese
@@ -728,8 +762,8 @@ Oct.2014
                         marketing support.</p>
                     <br>
 
-                    <p style="margin-left: 200px; margin-bottom: 6px"> <b>Plant,
-                        Land and Mine</b></p> 
+                    <p style="margin-left: 200px; margin-bottom: 6px"> <font size="5"><b>Plant,
+                        Land and Mine</b></font></p> 
                     <p style="margin-left: 200px; margin-bottom: 6px"> <i>Dong
                         Jing Ling Cement Plant</i> was built in 1986 in Liao
                         Ning, China. The structure of flow-sheet and equipment
