--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -179,8 +179,10 @@ Oct.2014
             <div class="container">
                 <div class="templatemo-slogan text-center">
                     <span class="txt_darkgrey"> </span><span class="txt_orange">于江山</span>
-                    <p class="txt_slogan"><br><i><font size="6">英国伯明翰大学计
-                    算机信息安全博士 <br> </font></i></p>
+                    <p class="txt_slogan"><br><i><font size="6">英国伯
+                    明翰大学计算机信息安全博
+                    士 <br> </font></i><font size="5" color="red">（抱歉，很久没有更新中文主页了，最新发表的
+                    论文和其他信息请参考英文主页）</font></p>
                 </div>	
             </div>
         </div>
