--- a/index.html
+++ b/index.html
@@ -291,7 +291,9 @@ Oct.2014
                               6px"><font size="5"><b>Publications and
                               Manuscripts: </b></font><br>
                               &nbsp;&nbsp;&nbsp;&nbsp;(My <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=
-                              en"> <b>Google scholar</b></a> page.)</p>
+                              en"> <b>Google scholar</b></a>
+                              and <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">
+                              <b>DBLP</b></a> page.)</p>
 
 	                  <ul type="square"; style="margin-left: 200px; margin-bottom:
                                                     6px">
@@ -359,6 +361,15 @@ Oct.2014
                         2014. (<a href="doc/paper/DTKI_report.pdf">Full
                         Version</a>)
                         </li>
+
+                          <li>
+                        Jiangshan Yu, Mark Ryan, and Cas
+                        Cremers. <a href="doc/paper/KUD.pdf">How to
+                        detect unauthorised usage of a
+                        key'</a>. <i> IACR Cryptology ePrint Archive 2015: 486</i>,
+                        2015.)
+                        </li>
+
                           </ul>
                       </li>
                       <br>
