--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -343,6 +343,11 @@ Oct.2014
                           and Networks'</a>. <i>IEEE TrustCom-2012</i>
                           (acceptance rate: 100/358 = 28%),
                           pp. 271-278. DOI:10.1109/TrustCom.2012.228</li>
+
+                           <li>Jiangshan Yu. 'Device attacker models:
+                          fact and fiction'. Security Protocols XXIII,
+                          accepted, 2015.</li>
+                          <br>
                         </ul>
                       </li>
 
@@ -371,6 +376,14 @@ Oct.2014
                         2014. (<a href="../doc/paper/DTKI_report.pdf">Full
                         Version</a>)
                         </li>
+
+                          <li>
+                        Jiangshan Yu, Mark Ryan, and Cas
+                        Cremers. <a href="doc/paper/KUD.pdf">How to
+                        detect unauthorised usage of a
+                        key'</a>. <i> IACR Cryptology ePrint Archive 2015: 486</i>,
+                        2015.)
+                        </li>
                           </ul>
                       </li>
 
@@ -383,7 +396,6 @@ Oct.2014
                           'A Generic Framework for Three-Factor
                           Authentication'</a>. [CompSecSem] 信息安全组会， 英国伯
                           明翰大学计算机学院， 2013。</li>
-                          <br>
                           <li>Jiangshan Yu. <a href="../doc/Slides/DTKI.pdf">
                               'DTKI: A protocol for public key
                               validation'</a>。 演讲于：
@@ -401,6 +413,10 @@ Oct.2014
                             <a href="http://imm.dtu.dk/~samo/hotspot14.html">
                             HotSpot Workshop at ETAPS2014 </a> (Grenoble，法国)。
                             </li>
+
+                          <li>Jiangshan Yu. 'Device attacker models:
+                          fact and fiction'. Presented at SPW 2015,
+                          Cambridge university, Cambridge, UK.</li>
                           <br>
                           <!-- <li>Jiangshan Yu. <a href="../doc/Slides/KUD_Slides.pdf"> -->
                           <!-- 'Key Usage Detection</a>. [CompSecSem] 信息安全组会， 英国伯 -->
@@ -424,6 +440,10 @@ Oct.2014
 	                        <li><i><a href="http://www.signalprocessingsociety.org/publications/periodicals/forensics/">IEEE
 	                        Transactions on Information Forensics &
 	                        Security</a></i></li>
+                                <li><i><a href="http://onlinelibrary.wiley.com/journal/10.1002/%28ISSN%291939-0122">
+                                      Security and Communication
+                                      Networks
+                                </a></i></li>
 	                      </ul>
 	                    </li>
                       
@@ -458,6 +478,76 @@ Oct.2014
 	                      </ul>
 	                    </li>
                     </ul>
+
+                    <br>
+                    <p style="margin-left: 200px; margin-bottom:
+                              6px"><font size="5"><b>荣誉和奖项: </b></font></p>
+	                  <ul type="disc"; style="margin-left: 200px; margin-bottom:
+                              6px">
+	                    <!-- <li><b>项目:</b><br> -->
+	                    <!--   <ul type="circle"> -->
+                            <!--     <li></li> -->
+                            <!--     </ul> -->
+                            <!--   </li> -->
+                            <li><b>奖学金:</b><br>
+	                      <ul type="circle">
+	                        <li> Universitas 21 scholarship from
+                                  the University of Birmingham,
+                                  2015.</li>
+
+	                        <li> EPSRC project funding for PhD
+                                  studies at University of Birmingham,
+                                  2012 - 2015.</li>
+
+	                        <li> Overseas top up scholarship from
+                                  the University of Birmingham for PhD
+                                  studies, 2012 - 2015.</li>
+                                <li>First class scholarship, Northeast
+                                  Agricultural University, Harbin,
+                                  Heilongjiang, China, 2008;</li>
+                                <li>First class scholarship, Northeast
+                                  Agricultural University, Harbin,
+                                  Heilongjiang, China, 2007;</li>
+                                <li>First class scholarship, Northeast
+                                  Agricultural University, Harbin,
+                                  Heilongjiang, China, 2006.</li>
+
+	                      </ul>
+	                    </li>
+                      
+                      <br>
+	                    <li><b>其他荣誉:</b><br>
+	                      <ul type="circle">
+                                <li>First place award, the Coniston poster competition, University of
+                                  Birmingham, UK, 2014.</li>
+                                <li>Outstanding Graduates of Heilongjiang Province, Heilongjiang,
+                                  China, 2009;</li>
+                                <li>Outstanding Graduates of Northeast Agricultural University,
+                                  Harbin, Heilongjiang, China, 2009;</li>
+                                <li>Best Undergraduate Thesis Award, Northeast Agricultural
+                                  University, Harbin, Heilongjiang, China, 2009;</li>
+                                <li>Outstanding Academic Award, The Northeast Agricultural
+                                  University, China, 2008;</li>
+                                <li>
+                                  First National Prize of China
+                                  Contemporary Undergraduate
+                                  Mathematical Contest in Modeling,
+                                  China, 2007;
+                                </li>
+                                <li>
+                                  Second National Prize of China Contemporary Undergraduate
+                                  Mathematical Contest in Modeling, China, 2006;
+                                </li>
+                                <li>Outstanding Student Award of The Northeast Agricultural
+                                  University, China, 2006;</li>
+                                <li>Outstanding Student Leadership
+                                  Award, The Northeast Agricultural
+                                  University, China, 2006;</li>
+	                        <br>
+	                      </ul>
+	                    </li>
+                          </ul>
+
 
                     <p style="margin-left: 200px; margin-bottom: 6px"><b>其他链接:
                     </b></p>
