--- a/index.html
+++ b/index.html
@@ -359,8 +359,10 @@ Oct.2014
                         Ryan. <a href="doc/paper/DTKI.pdf">'DTKI: a
                         new formalized PKI with no trusted
                         parties'</a>. <i>CoRR abs/1408.1023</i>,
-                        2014. (<a href="doc/paper/DTKI_report.pdf">Full
-                        Version</a>)
+                        2014. (<a href="doc/paper/DTKI_report.pdf">
+                        Technique Report</a>
+                        and <a href="doc/paper/DTKI-proof.zip">
+                        Tamarin code</a>)
                         </li>
 
                           <li>
