--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@ Oct.2014
                         Ryan. <a href="doc/paper/DTKI.pdf">'DTKI: a
                         new formalized PKI with no trusted
                         parties'</a>. <i>CoRR abs/1408.1023</i>,
-                        2014. (<a href="doc/paper/DTKI_report.pdf">
-                        Technique Report</a>
+                        2014. (<a href="doc/paper/DTKI_report.pdf">Technique
+                        Report</a>
                         and <a href="doc/paper/DTKI-proof.zip">
                         Tamarin code</a>)
                         </li>
@@ -370,7 +370,8 @@ Oct.2014
                         Cremers. <a href="doc/paper/KUD.pdf">How to
                         detect unauthorised usage of a key'</a>. <i>
                         IACR Cryptology ePrint Archive 2015: 486</i>,
-                        2015.)
+                        2015. (<a href="doc/paper/KUD-proof.zip">Tamarin
+                        code</a>)
                         </li>
 
                          <li>
