--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@ Oct.2014
                               <div class="col-md-2">
                                 <div class="templatemo-service-item">
                                   <div>
-                                    <img style="width: 400px; height: 260px;margin-left:20px" src="images/DSC_4316.JPG" alt="icon">
+                                    <img style="width: 28vw; height: 19vw;" src="images/DSC_4316.JPG" alt="icon">
+
+                                    <!-- <img style="width: 400px; height: 260px;margin-left:20px" src="images/DSC_4316.JPG" alt="icon"> -->
                                     
                             </div>
                             <br class="clearfix"/>
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                        <p style="margin-left: 500px; margin-bottom:
+                        <p style="margin-left: 31vw; margin-bottom:
                         6px"> <font size="4">I'm
                         an <a href="http://www.epsrc.ac.uk/Pages/default.aspx">EPSRC</a>
                         project funded Ph.D student working
@@ -257,18 +259,12 @@ Oct.2014
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                        <p style="margin-left: 200px; margin-bottom:
-                        6px"> <font size="4">
-                          </font>
-                          </p>
-
-                        <br>
 
                         <font size="4">
-                          <p style="margin-left: 200px; margin-bottom: 6px">
+                          <p style="margin-left: 18vw; margin-bottom: 6px">
                             <b><font size="5">Some quotes from Dr. Richard W. Hamming</b>
                             </font>
-                            <ul type="circle" style="margin-left: 200px; margin-bottom: 6px">
+                            <ul type="circle" style="margin-left: 18vw; margin-bottom: 6px">
                                   <li>"What are the important problems of
                                   your field?"</li>
 
@@ -287,7 +283,7 @@ Oct.2014
 
                             <br><br>
 
-                    <p style="margin-left: 200px; margin-bottom:
+                    <p style="margin-left: 18vw; margin-bottom:
                               6px"><font size="5"><b>Publications and
                               Manuscripts: </b></font><br>
                               &nbsp;&nbsp;&nbsp;&nbsp;(My <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=
@@ -295,7 +291,7 @@ Oct.2014
                               and <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">
                               <b>DBLP</b></a> page.)</p>
 
-	                  <ul type="square"; style="margin-left: 200px; margin-bottom:
+	                  <ul type="square"; style="margin-left: 18vw; margin-bottom:
                                                     6px">
 	                    <li><b>Journal:</b><br>
                         <ul type="circle">
@@ -393,11 +389,11 @@ Oct.2014
                     </ul>
                     
                     <br>
-                    <p style="margin-left: 200px; margin-bottom:
+                    <p style="margin-left: 18vw; margin-bottom:
                               6px"><font size="5"><b> Professional
                               Activities:
                     </b></font></p>
-	                  <ul type="disc"; style="margin-left: 200px; margin-bottom:
+	                  <ul type="disc"; style="margin-left: 18vw; margin-bottom:
                               6px">
 	                    <li><b>Invited Reviewer (Journal):</b><br>
 	                      <ul type="circle">
@@ -492,9 +488,9 @@ Oct.2014
 
 
                     <br>
-                    <p style="margin-left: 200px; margin-bottom:
+                    <p style="margin-left: 18vw; margin-bottom:
                               6px"><font size="5"><b>Honors and Awards: </b></font></p>
-	                  <ul type="disc"; style="margin-left: 200px; margin-bottom:
+	                  <ul type="disc"; style="margin-left: 18vw; margin-bottom:
                               6px">
 	                    <li><b>Scholarships:</b><br>
 	                      <ul type="circle">
@@ -557,10 +553,10 @@ Oct.2014
                           </ul>
 
 
-                    <p style="margin-left: 200px; margin-bottom: 6px"><font size="5"><b>Other
+                    <p style="margin-left: 18vw; margin-bottom: 6px"><font size="5"><b>Other
                     Links: </b></font></p>
 
-	                  <ul type="circle"; style="margin-left: 200px; margin-bottom:
+	                  <ul type="circle"; style="margin-left: 18vw; margin-bottom:
                               6px">
 
                       <li> <a href="http://afnom.github.io/"> The University of Birmingham Hacking Club</a></li>
@@ -632,7 +628,7 @@ Oct.2014
                         <div class="clearfix"></div>
                     </div>
 
-                        <p style="margin-left: 200px; margin-bottom:
+                        <p style="margin-left: 18vw; margin-bottom:
                         6px"> <font size="4">I'm a big fan of martial arts since
                         I was a little kid, and I was really
                         into <a href="http://en.wikipedia.org/wiki/Wuxia">Wuxia</a>
@@ -702,14 +698,14 @@ Oct.2014
                     </div>
 
                               <font size="4">
-                              <p style="margin-left: 200px; margin-bottom:
+                              <p style="margin-left: 18vw; margin-bottom:
                                         6px"> <font size="4">I'm involved in the
                                         following projects. Please contact me
                                         for more details. </p>
                               <br>
-                    <p style="margin-left: 200px; margin-bottom:
+                    <p style="margin-left: 18vw; margin-bottom:
                         6px"> <font size="5"><b>Tech-Project</b></font></p>
-	                  <ul type="square"; style="margin-left: 10em; margin-bottom:
+	                  <ul type="square"; style="margin-left: 18vw; margin-bottom:
                               6px">
 	                    <li><p><b>ECT/ConfiMail</b></p> 
                         <p>Enhanced certificate transparency (ECT) is a new
@@ -773,10 +769,10 @@ Oct.2014
                       <br>
                       </ul>
 
-                     <p style="margin-left: 200px; margin-bottom:
+                     <p style="margin-left: 18vw; margin-bottom:
                         6px"> <font size="5"><b>Trust and
                         Investment</b></font></p>
-                      <p style="margin-left: 200px; margin-bottom:
+                      <p style="margin-left: 18vw; margin-bottom:
                         6px"><a href="http://www.jinxdai.com">Jin Xin Tong Trust
                         and Investment Corporation Ltd</a> is a Chinese
                         financing and investment company, currently interested
@@ -789,9 +785,9 @@ Oct.2014
                         marketing support.</p>
                     <br>
 
-                    <p style="margin-left: 200px; margin-bottom: 6px"> <font size="5"><b>Plant,
+                    <p style="margin-left: 18vw; margin-bottom: 6px"> <font size="5"><b>Plant,
                         Land and Mine</b></font></p> 
-                    <p style="margin-left: 200px; margin-bottom: 6px"> <i>Dong
+                    <p style="margin-left: 18vw; margin-bottom: 6px"> <i>Dong
                         Jing Ling Cement Plant</i> was built in 1986 in Liao
                         Ning, China. The structure of flow-sheet and equipment
                         of the production process have been falling behind. It
@@ -805,7 +801,7 @@ Oct.2014
                         convenient transportation to railway, sea port, and
                         airport.</p>
 
-                   <ul type="square"; style="margin-left: 200px; margin-bottom:
+                   <ul type="square"; style="margin-left: 18vw; margin-bottom:
                               6px">
                       <li>Location: Liao Ning, China.</li>
                       <li>Area: 32,000 m<sup>2</sup>, can be extended to
