better support on mobile device

--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -190,14 +190,14 @@ Oct.2014
                               <div class="col-md-2">
                                 <div class="templatemo-service-item">
                                   <div>
-                                    <img style="width: 400px; height: 260px;margin-left:20px" src="../images/DSC_4316.JPG" alt="icon">
+                                    <img style="width: 28vw; height: 19vw;margin-left:20px" src="../images/DSC_4316.JPG" alt="icon">
                                     
                             </div>
                             <br class="clearfix"/>
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                        <p style="margin-left: 500px; margin-bottom:
+                        <p style="margin-left: 31vw; margin-bottom:
                         6px"> <font size="4">于江山目前在英国政
                         府 <a href="http://www.epsrc.ac.uk/Pages/default.aspx">EPSRC
                         科研机构</a>和<a href="www.birmingham.ac.uk/">
@@ -336,19 +336,19 @@ Oct.2014
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                        <p style="margin-left: 200px; margin-bottom:
+                        <p style="margin-left: 18vw; margin-bottom:
                         6px">
 
 
 
                         <font size="4">
-                          <p style="margin-left: 200px; margin-bottom: 6px">
+                          <p style="margin-left: 18vw; margin-bottom: 6px">
                             <b>
                               <font size="5">来自 Dr. Richard
                               W. Hamming 的问题：
                             </b>
                             </font>
-                            <ul type="circle" style="margin-left: 200px; margin-bottom: 6px">
+                            <ul type="circle" style="margin-left: 18vw; margin-bottom: 6px">
                                   <li>
                                     "在你的领域，最重要的最有价值的问题
                                     是什么？" ("What are the important
@@ -378,9 +378,9 @@ Oct.2014
                             <br><br>
 
                         <font size="4">
-                    <p style="margin-left: 200px; margin-bottom:
+                    <p style="margin-left: 18vw; margin-bottom:
                         6px"><b>发表论文: </b></p>
-	                  <ul type="square"; style="margin-left: 200px; margin-bottom:
+	                  <ul type="square"; style="margin-left: 18vw; margin-bottom:
                               6px">
 	                    <li><b>期刊:</b><br>
                         <ul type="circle">
@@ -499,9 +499,9 @@ Oct.2014
                     </ul>
                     
                     <br>
-                    <p style="margin-left: 200px; margin-bottom:
+                    <p style="margin-left: 18vw; margin-bottom:
                               6px"><b>论文评审: </b></p>
-	                  <ul type="disc"; style="margin-left: 200px; margin-bottom:
+	                  <ul type="disc"; style="margin-left: 18vw; margin-bottom:
                               6px">
 	                    <li><b>评审的期刊论文:</b><br>
 	                      <ul type="circle">
@@ -551,10 +551,10 @@ Oct.2014
                     </ul>
 
                     <br>
-                    <p style="margin-left: 200px; margin-bottom:
+                    <p style="margin-left: 18vw; margin-bottom:
                               6px"><font size="5"><b>荣誉和奖项
                           : </b></font></p>
-	                  <ul type="disc"; style="margin-left: 200px; margin-bottom:
+	                  <ul type="disc"; style="margin-left: 18vw; margin-bottom:
                               6px">
 	                    <!-- <li><b>项目:</b><br> -->
 	                    <!--   <ul type="circle"> -->
@@ -621,10 +621,10 @@ Oct.2014
                           </ul>
 
 
-                    <p style="margin-left: 200px; margin-bottom: 6px"><b>其他链接:
+                    <p style="margin-left: 18vw; margin-bottom: 6px"><b>其他链接:
                     </b></p>
 
-	                  <ul type="circle"; style="margin-left: 200px; margin-bottom:
+	                  <ul type="circle"; style="margin-left: 18vw; margin-bottom:
                               6px">
 
                       <li> <a href="http://afnom.github.io/"> 伯明翰大学黑客联
@@ -694,7 +694,7 @@ Oct.2014
                         <div class="clearfix"></div>
                     </div>
 
-                        <p style="margin-left: 200px; margin-bottom:
+                        <p style="margin-left: 18vw; margin-bottom:
                         6px"> <font size="4">从小喜欢看武侠小说和武侠电影，也很喜
                         欢武术。有缘在1999年开始接触传统武术长拳，后来翻阅了大量
                         的武术资料，并接触学习了多种不同的传统武术，比如天罡绵掌，
@@ -739,11 +739,11 @@ Oct.2014
                     </div>
 
                               <font size="4">
-                              <p style="margin-left: 200px; margin-bottom:
+                              <p style="margin-left: 18vw; margin-bottom:
                                         6px"> <font size="4">我参与的科研项目和商
                                         业项目： </p>
                               <br>
-                    <p style="margin-left: 200px; margin-bottom:
+                    <p style="margin-left: 18vw; margin-bottom:
                         6px"> <b>科研项目</b></p>
 	                  <ul type="square"; style="margin-left: 10em; margin-bottom:
                               6px">
@@ -808,9 +808,9 @@ Oct.2014
                       <br>
                       </ul>
 
-                     <p style="margin-left: 200px; margin-bottom: 6px"> <b>Trust
+                     <p style="margin-left: 18vw; margin-bottom: 6px"> <b>Trust
                         and Investment</b></p>
-                      <p style="margin-left: 200px; margin-bottom:
+                      <p style="margin-left: 18vw; margin-bottom:
                         6px"><a href="http://www.jinxdai.com">Jin Xin Tong Trust
                         and Investment Corporation Ltd</a> is a Chinese
                         financing and investment company, currently interested
@@ -823,9 +823,9 @@ Oct.2014
                         marketing support.</p>
                     <br>
 
-                    <p style="margin-left: 200px; margin-bottom: 6px"> <b>Plant,
+                    <p style="margin-left: 18vw; margin-bottom: 6px"> <b>Plant,
                         Land and Mine</b></p> 
-                    <p style="margin-left: 200px; margin-bottom: 6px"> <i>Dong
+                    <p style="margin-left: 18vw; margin-bottom: 6px"> <i>Dong
                         Jing Ling Cement Plant</i> was built in 1986 in Liao
                         Ning, China. The structure of flow-sheet and equipment
                         of the production process have been falling behind. It
@@ -839,7 +839,7 @@ Oct.2014
                         convenient transportation to railway, sea port, and
                         airport.</p>
 
-                   <ul type="square"; style="margin-left: 200px; margin-bottom:
+                   <ul type="square"; style="margin-left: 18vw; margin-bottom:
                               6px">
                       <li>Location: Liao Ning, China.</li>
                       <li>Area: 50,000 m<sup>2</sup></li>
