better support on mobile device

--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -190,7 +190,7 @@ Oct.2014
                               <div class="col-md-2">
                                 <div class="templatemo-service-item">
                                   <div>
-                                    <img style="width: 28vw; height: 19vw;margin-left:20px" src="../images/DSC_4316.JPG" alt="icon">
+                                    <img style="width: 28vw; height: 19vw;" src="../images/DSC_4316.JPG" alt="icon">
                                     
                             </div>
                             <br class="clearfix"/>
@@ -745,7 +745,7 @@ Oct.2014
                               <br>
                     <p style="margin-left: 18vw; margin-bottom:
                         6px"> <b>科研项目</b></p>
-	                  <ul type="square"; style="margin-left: 10em; margin-bottom:
+	                  <ul type="square"; style="margin-left: 18vw; margin-bottom:
                               6px">
 	                    <li><p><b>ECT/ConfiMail</b>
 	                    (<a href='../doc/paper/Mark-NDSS.pdf'>PDF</a>)</p>
