--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@ Oct.2014
                               <div class="col-md-2">
                                 <div class="templatemo-service-item">
                                   <div>
-                                    <img style="width: 28vw; height: 19vw;" src="images/DSC_4316.JPG" alt="icon">
-
-                                    <!-- <img style="width: 400px; height: 260px;margin-left:20px" src="images/DSC_4316.JPG" alt="icon"> -->
-                                    
+                                    <img style="width: 28vw; height: 19vw;"
+                                         src="images/DSC_4316.JPG"
+                                         alt="icon">
                             </div>
                             <br class="clearfix"/>
                         </div>
@@ -355,7 +354,7 @@ Oct.2014
                         Ryan. <a href="doc/paper/DTKI.pdf">'DTKI: a
                         new formalized PKI with no trusted
                         parties'</a>. <i>CoRR abs/1408.1023</i>,
-                        2014. (<a href="doc/paper/DTKI_report.pdf">Technique
+                        2014. (<a href="doc/paper/DTKI-report.pdf">Technique
                         Report</a>
                         and <a href="doc/paper/DTKI-proof.zip">
                         Tamarin code</a>)
