--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -444,7 +444,7 @@ Oct.2014
                         Jiangshan Yu, Vincent Cheval, Mark
                         Ryan. <a href="../doc/paper/DTKI.pdf">'DTKI: a new
                         formalized PKI with no trusted parties'</a>. <i>CoRR abs/1408.1023</i>,
-                        2014. (<a href="../doc/paper/DTKI_report.pdf">Full
+                        2014. (<a href="../doc/paper/DTKI-report.pdf">Full
                         Version</a>)
                         </li>
 
