--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ Oct.2014
                         particular, the focus of my research has been
                         on secure authentication, PKI, key management,
                         certificate security, and email security. Im'
-                        also interested in cloud security and e-voting
-                        security.</font>
+                        also very interested in crypto, cloud security
+                        and e-voting security.</font>
                         </p>
                 </div>
             </div>
