--- a/index.html
+++ b/index.html
@@ -108,9 +108,12 @@ Oct.2014
                         the <a href="http://www.cs.bham.ac.uk">School
                         of Computer
                         Science</a>, <a href="http://www.birmingham.ac.uk/">University
-                        of Birmingham</a>, U.K. I received my MSc and
-                        MPhil degree in computer science (information
-                        security, under the supervision
+                        of Birmingham</a>, U.K.  <!-- I'm also a director -->
+                        <!-- of CloudTomo, a startup aiming to help users -->
+                        <!-- to secure their email and cloud storage. --> I
+                        received my MSc and MPhil degree in computer
+                        science (information security, under the
+                        supervision
                         of <a href="https://scholar.google.co.uk/citations?user=QFDtSBIAAAAJ&hl=en">Dr. Guilin
                         Wang</a>
                         and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
@@ -122,7 +125,8 @@ Oct.2014
                         on secure authentication, PKI, key management,
                         certificate security, and email security. Im'
                         also very interested in crypto, cloud security
-                        and e-voting security.</font>
+                        and e-voting security.
+                          </font>
                         </p>
                 </div>
             </div>
@@ -394,6 +398,8 @@ Oct.2014
                     </b></font></p>
 	                  <ul type="disc"; style="margin-left: 18vw; margin-bottom:
                               6px">
+                            <li><b>Comference Committee</b></li><br>
+                            <p> Chair, <a href="https://blockchainbirmingham.wordpress.com/">Workshop on BlockChain</a>, Birmingham, United Kingdom, September 18, 2015.</p>
 	                    <li><b>Invited Reviewer (Journal):</b><br>
 	                      <ul type="circle">
 	                        <li><i><a href="http://comjnl.oxfordjournals.org">The Computer Journal</a></i></li>
