--- a/index.html
+++ b/index.html
@@ -703,10 +703,14 @@ Oct.2014
                     </div>
 
                               <font size="4">
-                              <p style="margin-left: 18vw; margin-bottom:
-                                        6px"> <font size="4">I'm involved in the
-                                        following projects. Please contact me
-                                        for more details. </p>
+                              <p style="margin-left: 18vw;
+                                        margin-bottom:
+                                        6px"> <font size="4">I'm a
+                                        direct of CloudTomo, a company
+                                        providing security solutions
+                                        for email and cloud
+                                        storage. Please contact me for
+                                        more details. </p>
                               <br>
                     <p style="margin-left: 18vw; margin-bottom:
                         6px"> <font size="5"><b>Tech-Project</b></font></p>
