--- a/index.html
+++ b/index.html
@@ -299,19 +299,19 @@ Oct.2014
 	                    <li><b>Journal:</b><br>
                         <ul type="circle">
                           <li>Guilin Wang, Jiangshan Yu, Qi
-                          Xie. <a href="doc/paper/TII-2013.pdf">'Security
+                          Xie. <a href="doc/paper/TII-2013.pdf">"Security
                           Analysis of A Single Sign-On Mechanism for Distributed
-                          Computer Networks'</a>. <i>IEEE Transactions on
+                          Computer Networks"</a>. <i>IEEE Transactions on
                           Industrial Informatics</i> (impact factor = 8.785,
                           h5-index = 46), Vol.9, No.1, pp.294-302,
                           Feb. 2013. DOI: 10.1109/TII.2012.221587 </li>
 
                           <li>
                             Jiangshan Yu, Guilin Wang, Yi Mu, and Wei
-                            Gao. <a href="doc/paper/TIFS-2014.pdf">'An Efficient
+                            Gao. <a href="doc/paper/TIFS-2014.pdf">"An Efficient
                             and Improved Generic Framework for Three-Factor
                             Authentication with Provably Secure
-                            Instantiation'</a>, <i>IEEE Transactions on
+                            Instantiation"</a>, <i>IEEE Transactions on
                             Information Forensics and Security (TIFS)</i>
                             (impact factor = 2.065, h5-index = 47), Vol.9, No.12
                             , pp. 2302-2313, Dec. 2014. DOI: 10.1109/TIFS.2014.2362979
@@ -323,14 +323,14 @@ Oct.2014
 	                    <li><b>Conference:</b><br>
 	                      <ul type="circle">
                           <li>Jiangshan Yu, Guilin Wang, and Yi
-                          Mu. <a href="doc/paper/TrustCom2012.pdf">'Provably
+                          Mu. <a href="doc/paper/TrustCom2012.pdf">"Provably
                           Secure Single Sign-on Scheme in Distributed Systems
-                          and Networks'</a>. <i>IEEE TrustCom-2012</i>
+                          and Networks"</a>. <i>IEEE TrustCom-2012</i>
                           (acceptance rate: 100/358 = 28%),
                           pp. 271-278. DOI:10.1109/TrustCom.2012.228</li>
-                          <li>Jiangshan Yu and Mark Ryan, 'Device
+                          <li>Jiangshan Yu and Mark Ryan, "Device
                           attacker models: fact and
-                          fiction', <i>Security Protocols XXIII</i>,
+                          fiction", <i>Security Protocols XXIII</i>,
                           accepted, 2015.
                         </ul>
                       </li>
@@ -340,9 +340,9 @@ Oct.2014
 	                    <li><b>Master Thesis:</b><br>
 	                      <ul type="circle">
                           <li>Jiangshan
-                          Yu. <a href="doc/paper/Thesis.pdf">'Remote User
+                          Yu. <a href="doc/paper/Thesis.pdf">"Remote User
                           Authentication in Distributed Networks and
-                          Systems'</a>. <i>Master of Computer Science
+                          Systems"</a>. <i>Master of Computer Science
                           (Research)</i>, School of Computer Science and
                           Software Engineering, University of Wollongong,
                           2012.</li>
@@ -351,13 +351,13 @@ Oct.2014
 
                       <br>
 
-                      <li><b>Draft:</b><br> 
+                      <li><b>Unpublished work:</b><br> 
 	                      <ul type="circle">
                           <li>
                         Jiangshan Yu, Vincent Cheval, and Mark
-                        Ryan. <a href="doc/paper/DTKI.pdf">'DTKI: a
+                        Ryan. <a href="doc/paper/DTKI.pdf">"DTKI: a
                         new formalized PKI with no trusted
-                        parties'</a>. <i>CoRR abs/1408.1023</i>,
+                        parties"</a>. <i>CoRR abs/1408.1023</i>,
                         2014. (<a href="doc/paper/DTKI-report.pdf">Technique
                         Report</a>
                         and <a href="doc/paper/DTKI-proof.zip">
@@ -366,24 +366,24 @@ Oct.2014
 
                           <li>
                         Jiangshan Yu, Mark Ryan, and Cas
-                        Cremers. <a href="doc/paper/KUD.pdf">How to
-                        detect unauthorised usage of a key'</a>. <i>
+                        Cremers. <a href="doc/paper/KUD.pdf">"How to
+                        detect unauthorised usage of a key"</a>. <i>
                         IACR Cryptology ePrint Archive 2015: 486</i>,
                         2015. (<a href="doc/paper/KUD-proof.zip">Tamarin
                         code</a>)
                         </li>
 
                          <li>
-                        Jiangshan Yu and Mark Ryan. Evaluating web
-                        PKIs.
+                        Jiangshan Yu and Mark Ryan. "Evaluating web
+                        PKIs".
                         </li>
 
-                        <!-- <li> -->
-                        <!-- Jiangshan Yu, Guilin Wang, and Yi -->
-                        <!-- Mu. Efficient and Provably Secure Single -->
-                        <!-- Sign-on Schemes in Distributed Systems and -->
-                        <!-- Networks -->
-                        <!-- </li> -->
+                         <li>
+                           Jiangshan Yu, Guilin Wang, and Yi
+                           Mu. "Efficient and Provably Secure Single
+                           Sign-on Schemes in Distributed Systems and
+                           Networks".
+                         </li>
 
                           </ul>
                       </li>
