--- a/index.html
+++ b/index.html
@@ -375,14 +375,14 @@ Oct.2014
 
                          <li>
                         Jiangshan Yu and Mark Ryan. "Evaluating web
-                        PKIs".
+                        PKIs", 2015.
                         </li>
 
                          <li>
                            Jiangshan Yu, Guilin Wang, and Yi
                            Mu. "Efficient and Provably Secure Single
                            Sign-on Schemes in Distributed Systems and
-                           Networks".
+                           Networks", 2015.
                          </li>
 
                           </ul>
