--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ Oct.2014
                         Ryan. <a href="doc/paper/DTKI.pdf">"DTKI: a
                         new formalized PKI with no trusted
                         parties"</a>. <i>CoRR abs/1408.1023</i>,
-                        2014. (<a href="doc/paper/DTKI-report.pdf">Technique
+                        2014. (<a href="doc/paper/DTKI-report.pdf">Technical
                         Report</a>
                         and <a href="doc/paper/DTKI-proof.zip">
                         Tamarin code</a>)
