--- a/index.html
+++ b/index.html
@@ -436,11 +436,15 @@ Oct.2014
 		                           <a href="http://www.ensa.ac.ma/sec2014/"> SEC 2014</a>;
                              </p>
                              <p>
-		                           <a href="http://fms-14.appspot.com/"> FMS 2014 </a>;
+		                           <a href="http://fms-14.appspot.com/"> FMS 2014</a>;
 		                           <a href="https://www.cylab.cmu.edu/news_events/events/wpes2014/">
-		                             WPES 2014 </a>;
-                               <a href="http://www.etaps.org/index.php/2015/post">POST (ETAPS) 2015</a>;
-                               <a href="http://icsd.i2r.a-star.edu.sg/asiaccs15/">ASIACCS 2015</a>.
+		                             WPES 2014</a>;
+                               <a href="http://www.etaps.org/index.php/2015/post"> POST (ETAPS) 2015</a>;
+                               <a href="http://icsd.i2r.a-star.edu.sg/asiaccs15/"> ASIACCS 2015</a>;
+                             </p>
+                             <p>
+                               <a href="https://ifipsec.org/2015/"> IFIP SEC 2015</a>;
+                               <a href="http://www.ieee-security.org/TC/EuroSP2016/"> IEEE Euro S&P 2016</a>.
                              </p>
                            </i>                          
 	                        <br>
