--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@ Oct.2014
                           and Networks"</a>. <i>IEEE TrustCom-2012</i>
                           (acceptance rate: 100/358 = 28%),
                           pp. 271-278. DOI:10.1109/TrustCom.2012.228</li>
-                          <li>Jiangshan Yu and Mark Ryan, "Device
+                          <li>Jiangshan Yu and Mark Ryan, <a href="doc/paper/SPW-2015.pdf"> "Device
                           attacker models: fact and
-                          fiction", <i>Security Protocols XXIII</i>,
+                          fiction"</a>, <i>Security Protocols XXIII</i>,
                           accepted, 2015.
                         </ul>
                       </li>
@@ -481,7 +481,13 @@ Oct.2014
                           <br>
                            <li>Jiangshan Yu. 'Device attacker models:
                           fact and fiction'. Presented at SPW 2015,
-                          Cambridge university, Cambridge, UK.</li>
+                             Cambridge university, Cambridge, UK.</li>
+
+                          <li>Jiangshan Yu. 'security in periodically
+                          compromised cloud storage'. Presented at
+                          CryptoForma, University of Strathclyde,
+                          Glasgow, UK.</li>
+
                           <br>
                           <!-- <li>Jiangshan Yu. <a href="doc/Slides/KUD_Slides.pdf"> -->
                           <!-- 'Key Usage Detection</a>. [CompSecSem] Security -->
