--- a/web/resume.html
+++ b/web/resume.html
@@ -26,13 +26,17 @@
 				<div class="yui-u first">
 					<h1>Jiangshan Yu</h1>
 					<h2>PhD researcher in Information Sercurity</h2>
+                                        <p>
+                                          <FONT COLOR="#FE2E2E"
+                                          size='4'>Please download the
+                                          PDF version for an up to
+                                          date CV.</FONT></p>
 				</div>
 
-				<div class="yui-u">
+				                <div class="yui-u">
 					<div class="contact-info">
 <br>
 						<h3><a id="pdf" href="../doc/J.YU.pdf">Download PDF</a></h3>
-
 <!--              <a id="pdf" href="../doc/J.YU_s.pdf">Download PDF &nbsp(SHORT)</a></h3>-->
 <!--
 					<h3><a href="mailto:email@me.com">email@me.com</a></h3>
