--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@ Oct.2014
                         6px"> <font size="5"><b>Trust and
                         Investment</b></font></p>
                       <p style="margin-left: 18vw; margin-bottom:
-                        6px"><a href="http://www.jinxdai.com">Jin Xin Tong Trust
+                        6px"><a href="http://www.prccf.com">Jin Xin Tong Trust
                         and Investment Corporation Ltd</a> is a Chinese
                         financing and investment company, currently interested
                         in helping individual found a company and helping SMEs
